# go_client

go_client/: GoClient.gdextension  icon.svg.import  project.godot
go_client/content/materials/: black_stone.svg.import  board.png.import  board.svg.import  white_stone.svg.import
go_client/content/scenes/: area_2d.gd  board.tscn  master.tscn
gs/: .Cargo.toml.swp  .gitignore  Cargo.toml
gs/client/: Cargo.toml  cert-big.crt  client.rs  rootca.crt
gs/server/: Cargo.toml  cert-big.crt  cert.crt  cert.key  gen-certs.sh  rootca.crt  server.rs
gs/server/_old/: cert-big.crt  cert.crt  cert.key
gs/src/: main.rs
