[package]
name = "gs_rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
quiche = "0.22.0"
ring = "0.17.8"
log = { version = "0.4", features = ["std"] }
pretty_env_logger = "0.5"
mio = { version = "1.0", features = ["net", "os-poll"] }
url = "2.5"

[[bin]]
name = "server"
path = "server.rs"